--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ Index:
 </head>
 
 <body>
-    <header>EDUCAÇÃO FINANCEIRA</header>
+    <header>INVESTRIMENTO FINANCEIRO</header>
 
     <section>
         <div class="chamada-texto">
