--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ Index:
 
     <section>
         <div class="chamada-texto">
-            <h1>Investimentos de renda fixa ou variável?</h1>
+            <h1>como fazer um investimento?</h1>
             <p>Dicas de como escolher!!</p>
         </div>
 
