--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ Index:
     <section>
         <div class="chamada-texto">
             <h1>como fazer um investimento?</h1>
-            <p>Dicas de como escolher!!</p>
+            <p>Dicas de como fazer!!</p>
         </div>
 
         <div>
