--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@ Index:
 </head>
 
 <body>
-    <header>INVESTRIMENTO FINANCEIRO</header>
+    <header>INVESTIMENTO FINANCEIRO</header>
 
     <section>
         <div class="chamada-texto">
             <h1>como fazer um investimento?</h1>
-            <p>Dicas de como investir!!</p>
+        <p>Dicas de como investir!!</p>
         </div>
-        <p> você sabe como investir sewu dinheiro?
+        <p> você sabe como investir seeu dinheiro?
         <p>venha aprender a ter uma boa renda conosco!!</p></p>
-        <p>o canal vai nos assinar a investir nosso dinheiro e ter uma renda melhor em nosso futuro.</p>
+        <p> o canal vai nos assinar a investir nosso dinheiro e ter uma renda melhor em nosso futuro.</p>
 
         <div>
            <iframe width="560" height="315" src="https://www.youtube.com/embed/Q6x0xnI0uCg?si=owhu-x8ubRJop74G" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
